--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.22",
-    "gatsby": "^2.20.25",
+    "gatsby": "^2.21.10",
+    "gatsby-cli": "^2.12.8",
     "gatsby-image": "^2.3.4",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-google-analytics": "^2.2.4",
     "gatsby-plugin-layout": "^1.2.3",
     "gatsby-plugin-manifest": "^2.3.5",
     "gatsby-plugin-offline": "^3.1.4",
+    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.2.4",
     "gatsby-plugin-root-import": "^2.0.5",
     "gatsby-plugin-sass": "^2.2.3",
@@ -33,6 +35,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
+    "react-lottie": "^1.2.3",
     "set-value": "^2.0.1",
     "shopify-buy": "^2.9.3"
   },
