--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "gatsby-transformer-sharp": "^2.4.6",
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.15",
+    "lottie-web": "^5.6.8",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "querystringify": "^2.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
-    "react-lottie": "^1.2.3",
     "set-value": "^2.0.1",
     "shopify-buy": "^2.9.3"
   },
