--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.22",
+    "classnames": "^2.2.6",
     "gatsby": "^2.21.10",
     "gatsby-cli": "^2.12.8",
     "gatsby-image": "^2.3.4",
@@ -36,6 +37,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
+    "react-use-scroll-position": "^2.0.0",
     "set-value": "^2.0.1",
     "shopify-buy": "^2.9.3"
   },
@@ -57,6 +59,7 @@
     "type-check": "tsc --pretty --noEmit"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.10",
     "@types/node": "^13.13.0",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
