--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
+    "react-pose": "^4.0.10",
     "react-use-scroll-position": "^2.0.0",
     "set-value": "^2.0.1",
     "shopify-buy": "^2.9.3"
