--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
     "react-pose": "^4.0.10",
+    "react-slick": "^0.26.1",
     "react-use-scroll-position": "^2.0.0",
     "set-value": "^2.0.1",
-    "shopify-buy": "^2.9.3"
+    "shopify-buy": "^2.9.3",
+    "slick-carousel": "^1.8.1"
   },
   "keywords": [
     "gatsby",
@@ -66,6 +68,7 @@
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "@types/react-helmet": "^5.0.15",
+    "@types/react-slick": "^0.23.4",
     "@types/shopify-buy": "^1.11.1",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
