--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
     "react-pose": "^4.0.10",
-    "react-slick": "^0.26.1",
+    "react-slick": "file:.yalc/react-slick",
+    "react-slick-teehouse": "file:.yalc/react-slick-teehouse",
     "react-use-scroll-position": "^2.0.0",
     "set-value": "^2.0.1",
     "shopify-buy": "^2.9.3",
