--- a/package.json
+++ b/package.json
@@ -30,21 +30,23 @@
     "gatsby-source-shopify": "^3.1.4",
     "gatsby-transformer-sharp": "^2.4.6",
     "js-yaml": "^3.13.1",
-    "lodash": "^4.17.15",
     "lottie-web": "^5.6.8",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "querystringify": "^2.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-draggable": "^4.4.2",
     "react-helmet": "^5.2.1",
     "react-pose": "^4.0.10",
     "react-slick": "file:.yalc/react-slick",
     "react-slick-teehouse": "file:.yalc/react-slick-teehouse",
+    "react-use-dimensions": "^1.2.1",
     "react-use-scroll-position": "^2.0.0",
     "set-value": "^2.0.1",
     "shopify-buy": "^2.9.3",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "use-deep-compare-effect": "^1.3.1"
   },
   "keywords": [
     "gatsby",
