--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.22",
+    "@welldone-software/why-did-you-render": "^4.2.1",
     "classnames": "^2.2.6",
     "gatsby": "^2.21.10",
     "gatsby-cli": "^2.12.8",
     "gatsby-image": "^2.3.4",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-google-analytics": "^2.2.4",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-layout": "^1.2.3",
     "gatsby-plugin-manifest": "^2.3.5",
     "gatsby-plugin-offline": "^3.1.4",
-    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.2.4",
     "gatsby-plugin-root-import": "^2.0.5",
     "gatsby-plugin-sass": "^2.2.3",
@@ -45,8 +46,7 @@
     "react-use-scroll-position": "^2.0.0",
     "set-value": "^2.0.1",
     "shopify-buy": "^2.9.3",
-    "slick-carousel": "^1.8.1",
-    "use-deep-compare-effect": "^1.3.1"
+    "slick-carousel": "^1.8.1"
   },
   "keywords": [
     "gatsby",
