--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     "react-draggable": "^4.4.2",
     "react-helmet": "^5.2.1",
     "react-pose": "^4.0.10",
-    "react-slick": "file:.yalc/react-slick",
-    "react-slick-teehouse": "file:.yalc/react-slick-teehouse",
+    "react-slick-teehouse": "0.26.1",
     "react-use-dimensions": "^1.2.1",
     "react-use-scroll-position": "^2.0.0",
     "set-value": "^2.0.1",
