--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/styled": "^10.0.22",
     "@welldone-software/why-did-you-render": "^4.2.1",
     "classnames": "^2.2.6",
+    "framer-motion": "^1.11.0",
     "gatsby": "^2.21.10",
     "gatsby-cli": "^2.12.8",
     "gatsby-image": "^2.3.4",
@@ -39,7 +40,6 @@
     "react-dom": "^16.13.1",
     "react-draggable": "^4.4.2",
     "react-helmet": "^5.2.1",
-    "react-pose": "^4.0.10",
     "react-slick-teehouse": "0.26.1",
     "react-use-dimensions": "^1.2.1",
     "set-value": "^2.0.1",
